--- a/resume-site/src/App.css
+++ b/resume-site/src/App.css
@@ -46,9 +46,38 @@ body {
   color: #802bb1;
 }
 
+/* NavBar.tsx styles */
 .custom-navbar-items {
   color: #802bb1;
 }
-.custom-navbar-items:hover {
+.custom-navbar-items:hover,
+.custom-navbar-items:active {
+  color: #a35ccc;
+}
+
+/* SocialsTab.tsx styles */
+.right-hovering-div {
+  /* Positions div to right of screen*/
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  transform: translateY(-50%);
+
+  /*background-color: #4c495d;*/
+  background-color: #564f6f;
+  padding: 8px;
+  color: #d1d7e0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.custom-icons {
+  color: #d1d7e0;
+
+}
+
+.custom-icons:hover {
   color: #a35ccc;
 }
