--- a/resume-site/src/App.css
+++ b/resume-site/src/App.css
@@ -1,22 +1,8 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
 
 @keyframes logo-spin {
   from {
@@ -98,15 +84,31 @@ body {
   text-align: justify;
 }
 
+/* Contact.tsx stykes */
+.contact-cont {
+  height: 800px;
+}
+
+.contact-form {
+  width: 20%;
+}
+.form-text {
+}
+
 /* Footer.tsx styles */
 .footer {
   background-color: #564f6f;
-  height: 350px;
-  width: 100vw;
+  height: 250px;
+  width: 100%;
+  text-align: center;
 }
 
 .footer-icon {
   margin-right: 5px;
+}
+
+.footer-links {
+  text-decoration: none;
 }
 
 .copyright {
