--- a/resume-site/src/App.css
+++ b/resume-site/src/App.css
@@ -42,7 +42,7 @@ body {
 /* Styles for all modular containers */
 .cont {
   width: 80%;
-  height: 1000px;
+  height: 100vh;
   margin: auto;
 }
 
@@ -75,6 +75,9 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+
+  opacity: 1;
+  transition: opacity 0.95s ease-in-out, transform 0.95s ease-in-out;
 }
 
 .custom-icons {
@@ -85,18 +88,37 @@ body {
   color: var(--highlight);
 }
 
+.container {
+  /*height: 100vh;*/
+}
+
 /* Header.tsx styles */
 .header-name {
   background-color: var(--accent);
   display: inline-block;
-  /*transform: rotate(10deg); /* Adjust the degree of rotation as needed 
-  z-index: -1;
-  */
+  opacity: 1;
+  transition: opacity 0.95s ease-in-out, transform 0.95s ease-in;
+}
+
+.fade-out {
+  opacity: 0;
+  transform: translateX(120px);
 }
 
 .header-image {
-  height: 100%
+  height: 100vh; /* 100% of the viewport height */
+  width: auto;   /* Automatically adjust the width to maintain aspect ratio */
+  max-width: 100%; /* Ensure the image doesn't exceed the full width of the viewport */
+  object-fit: cover; /* Maintain aspect ratio and cover the entire container */
+
+  transition: opacity 0.5s ease-in-out, transform 0.5s ease-in;
 }
+
+.fade-up {
+  opacity: 0;
+  transform: translateY(-120px);
+}
+
 
 .title-name {
   font-size: 8em;
@@ -117,6 +139,10 @@ body {
 
 .about-headshot {
   min-width: 100%;
+}
+
+.about-animation {
+
 }
 
 /* Contact.tsx stykes */
