--- a/resume-site/src/App.css
+++ b/resume-site/src/App.css
@@ -49,7 +49,27 @@ body {
 .header-text {
   font-size: 5em;
 }
+.cont {
+  height: 110vh;
+}
 
+.spacer {
+  aspect-ratio: 960/300;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.layer1 {
+  background-image: url('./assets/svgbg1.svg');
+
+}
+
+.layer2 {
+  background-image: url('./assets/svgbg2.svg')
+}
+/********************************************************************************************/
 /* NavBar.tsx styles */
 .custom-navbar-items {
   color: var(--text);
@@ -59,6 +79,7 @@ body {
   color: var(--highlight);
 }
 
+/********************************************************************************************/
 /* SocialsTab.tsx styles */
 .right-hovering-div {
   /* Positions div to right of screen*/
@@ -88,10 +109,7 @@ body {
   color: var(--highlight);
 }
 
-.container {
-  /*height: 100vh;*/
-}
-
+/********************************************************************************************/
 /* Header.tsx styles */
 .header-name {
   background-color: var(--accent);
@@ -124,7 +142,7 @@ body {
   font-size: 8em;
 }
 
-
+/********************************************************************************************/
 /* About.tsx styles */
 .about-text-cont {
   max-width: 600px;
@@ -135,16 +153,23 @@ body {
 }
 
 .about-me-header {
+  font-size: 7em;
 }
 
 .about-headshot {
+  border-radius: 10%;
   min-width: 100%;
 }
 
-.about-animation {
-
+.highlights-content {
+  background-color: var(--main);
+  border-radius: 1.2em;
+  font-size:small;
+  width: 10em;
+  height: 10em;
 }
 
+/********************************************************************************************/
 /* Contact.tsx stykes */
 .contact-link-cont {
   display: flex;
@@ -197,6 +222,7 @@ body {
   border-color: var(--highlight);
 }
 
+/********************************************************************************************/
 /* Footer.tsx styles */
 .footer {
   background-color: var(--main);
